--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation 'net.jcip:jcip-annotations:1.0'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
 }
 
 test {
